2nd commit - Added css animations
This commit adds css animations and centers the body

--- a/index.html
+++ b/index.html
@@ -2,31 +2,41 @@
 <html>
     <head>
         <title>maracas</title>
+        <link rel="stylesheet" href="css/animations.css"/>
+        <link rel="stylesheet" href="css/main.css"/>
     </head>
-    <body>
+    <body class="fadein">
         <header>
             <ul>
                 <li>HOME</li>
+                <li>MY WORK</li>
             </ul>
-            <hr>
         </header>
+        <br>
+        <br> <!--I had problems with making space i css. I'm sorry for hurting your eyes-->
+        <br>
+        <br>
         <section>
-                <h1>Maracas</h1>
-                <img src="Images/maracasdalle.png" height="300" width="300">
-                <p>Profesjonalny debil</p>
-                <p>amator Python i HTML</p>
+                <img src="Images/maracasdalle.png" height="170" width="170" class="logo center">
+                <br>
+                <h1 class="page-header center" style=font-size:270%;>Maracas</h1>
+                <br>
+                <p class="anim-typewriter line center">Profesjonalny debil, oraz amator Python i HTML</p>
         </section>
+        <br>
         <footer>
             <a href="https://discords.com/bio/p/03754b94-12b5-e0ee-4b80-3730e629861e">
-              <img src="Images/discord.png", width="53", height="53">
+              <img src="Images/discord.png" width="38" height="43">
             </a>
+            &lt;
             <a href="https://soundcloud.com/amatela">
-                <img src="Images/soundcloud.png", width="47", height="47">
-              </a>
-              <a href="https://github.com/Srijajum">
-                <img src="Images/github.png", width="45", height="45">
-              </a>
-            <hr>
+               <img src="Images/soundcloud.png" width="47" height="47">
+            </a>
+            &lt         
+            <a href="https://github.com/Srijajum">
+                <img src="Images/github.png" width="45" height="45">
+            </a>
+            
         </footer>
     </body>
 </html>
