Added my work page, added improvments to css and added fade in animation

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     </head>
     <body class="fadein">
         <header>
-            <ul>
-                <li>HOME</li>
-                <li>MY WORK</li>
+            <ul class="headerlist hederlists">
+                <li><a href="index.html" class="nostyle">HOME</a></li>
+                <li><a href="portfolio.html" class="nostyle">MY WORK</a></li>
             </ul>
         </header>
         <br>
@@ -28,11 +28,11 @@
             <a href="https://discords.com/bio/p/03754b94-12b5-e0ee-4b80-3730e629861e">
               <img src="Images/discord.png" width="38" height="43">
             </a>
-            &lt;
+            <span style="color:#16161a;">&lt;</span>
             <a href="https://soundcloud.com/amatela">
                <img src="Images/soundcloud.png" width="47" height="47">
             </a>
-            &lt         
+            <span style="color:#16161a;">&lt;</span>         
             <a href="https://github.com/Srijajum">
                 <img src="Images/github.png" width="45" height="45">
             </a>
