4th commit. portfolio page updated
portfolio.html is updated with my socials and github repos

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,14 +17,39 @@
         <br> <!--I'M SO SO SORRY FOR THIS-->
         <br>
         <section>
-            <h1 class="page-header center" style=font-size:270%;>MUSIC</h1>
+            <div>
+                <h1 class="page-header center" style=font-size:270%;>MUSIC</h1>
+                <br>
+                <h2 class="page-header center">LO-FI</h2>
+                <br>
+                <iframe class="center" width="30%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1298856934&color=%23787878&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/amatela" title="wodogłowie" target="_blank" style="color: #cccccc; text-decoration: none;">wodogłowie</a> · <a href="https://soundcloud.com/amatela/rhtymicfrequencies" title="Rhtymic Frequencies" target="_blank" style="color: #cccccc; text-decoration: none;">Rhtymic Frequencies</a></div>
+                <br>
+                <iframe class="center" width="30%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1304361451&color=%23787878&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/amatela" title="wodogłowie" target="_blank" style="color: #cccccc; text-decoration: none;">wodogłowie</a> · <a href="https://soundcloud.com/amatela/inserttracknamehere" title="*INSERT TRACK NAME HERE*" target="_blank" style="color: #cccccc; text-decoration: none;">*INSERT TRACK NAME HERE*</a></div>
+            </div>
             <br>
-            <h2 class="page-header center">LO-FI</h2>
+            <div>
+                <h1 class="page-header center" style="font-size:270%">MY SOCIALS</h1>
+                <br>
+                <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@recroom_person" data-unique-id="recroom_person" data-embed-type="creator" style="max-width: 720px; min-width: 288px;" > <section> <a target="_blank" href="https://www.tiktok.com/@recroom_person?refer=creator_embed">@recroom_person</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+                <br>
+                <a href="https://www.reddit.com/user/sijajesR"><img style="border-radius: 10%;" class="center" src="https://cdn.discordapp.com/attachments/922867541687287818/1018426860864024616/unknown.png" alt="u/maracasR"></a>
+            </div>
             <br>
-            <iframe class="center" width="30%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1298856934&color=%23787878&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/amatela" title="wodogłowie" target="_blank" style="color: #cccccc; text-decoration: none;">wodogłowie</a> · <a href="https://soundcloud.com/amatela/rhtymicfrequencies" title="Rhtymic Frequencies" target="_blank" style="color: #cccccc; text-decoration: none;">Rhtymic Frequencies</a></div>
-            <br>
-            <iframe class="center" width="30%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1304361451&color=%23787878&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/amatela" title="wodogłowie" target="_blank" style="color: #cccccc; text-decoration: none;">wodogłowie</a> · <a href="https://soundcloud.com/amatela/inserttracknamehere" title="*INSERT TRACK NAME HERE*" target="_blank" style="color: #cccccc; text-decoration: none;">*INSERT TRACK NAME HERE*</a></div>
+            <div>
+                <h1 class="page-header center" style="font-size:270%">GITHUB REPOS</h1>
+                <br>
+                <div class="center">
+                    <div class="github-card" data-github="srijajum/portfolio" data-width="400" data-height="" data-theme="default"></div>
+                    <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+                </div>
+                <br>
+                <br>
+                <div class="center">
+                    <div class="github-card" data-github="Srijajum/textinator" data-width="400" data-height="" data-theme="default"></div>
+                    <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+                </div>
+            </div>
         </section>
-
+        
     </body>
 </html>
