--- a/index.html
+++ b/index.html
@@ -38,5 +38,8 @@
             </a>
             
         </footer>
+        <div class="info">
+            <p style="color:#16161a">sorry killerek za zawalenie designu strony</p>
+        </div>
     </body>
 </html>
