small improvments to the main page

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <br>
         <br>
         <section>
-                <img src="Images/maracasdalle.png" height="170" width="170" class="logo center">
+                <img src="Images/pfp.png" height="170" width="170" class="logo center">
                 <br>
                 <h1 class="page-header center" style=font-size:270%;>Maracas</h1>
                 <br>
-                <p class="anim-typewriter line center">Profesjonalny debil, oraz amator Python i HTML</p>
+                <p class="anim-typewriter line center">Profesjonalny debil, oraz amator Arduino</p>
         </section>
         <br>
         <footer>
@@ -40,6 +40,6 @@
         </footer>
         <div class="info">
             <p style="color:#16161a">sorry killerek za zawalenie designu strony</p>
-        </div>
+        </divPython i HTML>
     </body>
 </html>
